# task-orchestrator

./: .dark-factory.yaml  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: dod.md
prompts/: a-fix-lint-and-move-imports.md  add-status-cache-count.md  b-fix-config-sys-exit.md  c-fix-broadcast-race.md  clean-dead-claude-paths.md  cleanup-factory-dead-code.md  d-delete-dead-executor.md  deduplicate-task-reader.md  delete-dead-executor.md  e-cleanup-factory-dead-code.md  f-add-status-cache-count.md  fix-broadcast-race.md  fix-config-sys-exit.md  fix-defer-date-parsing.md  fix-done-column-fetch-completed-tasks.md  fix-lint-and-move-imports.md  fix-readme.md  fix-resume-command-cd-prefix.md  g-deduplicate-task-reader.md  h-fix-readme.md  i-migrate-claude-agent-sdk.md  migrate-claude-agent-sdk.md  migrate-update-phase-to-vault-cli.md  multi-vault-only-button.md  multi-vault-selector.md  remove-session-manager-simple-ops.md  spec-002-date-urgency-visualization.md  upcoming-deferred-tasks.md  use-session-project-dir-in-cleanup.md  use-vault-cli-for-defer-complete.md  vault-cli-fast-path-ui.md
prompts/completed/: 001-fix-defer-date-parsing.md  002-use-vault-cli-for-defer-complete.md  003-vault-cli-fast-path-ui.md  004-clean-dead-claude-paths.md  014-h-fix-readme.md  (+36 more)
specs/: cleanup-resolve-renamed-sessions.md  date-urgency-visualization.md
tests/: conftest.py  test_api.py  test_cleanup.py  test_config.py  test_goal_card_cleanup.py  test_hierarchy.py  test_session_manager_integration.py  test_session_resolver.py  test_task_reader.py  test_vault_cli_watcher.py
(+72 files in other folders)
